bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:1: error: Missing closing brace `}' assumed here
def in1020(a:Int, b:Int):Boolean = {
^In1020:1: error: expected class or object definition
def in1020(a:Int, b:Int):Boolean = {
^